Improved solution according to latest request